--- a/Report.tex
+++ b/Report.tex
@@ -169,7 +169,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     \end{table}
 
     \begin{figure}[htbp]
-        \centerline{\includegraphics{fig1.png}}
+        \centerline{\includegraphics{arduiono-uno}}
         \caption{Example of a figure caption.}
         \label{fig}
     \end{figure}
