--- a/Report.tex
+++ b/Report.tex
@@ -17,7 +17,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
         }
 
-    \author{\IEEEauthorblockN{ Kedar Salunkhe}
+    \author{\IEEEauthorblockN{Kedar Salunkhe}
     \IEEEauthorblockA{
     Roll no. C54 \\
     PRN no. 2122000465}
@@ -47,16 +47,17 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     \maketitle
 
     \begin{abstract}
-        In the developing countries there are many dangerous roads where accidents and causes very lethal effects now a day.
-        If we talk about dangerous roads in the world then all of them are mountain roads, T roads, narrow roads. Some mountain
-        roads are narrow, having many curves and very tight, this cause of the most hazards.
-        Vehicle accident prevention system can be crucial step in accident safety on hilly and mountain roads. We have recognized our
-        past, thousands of accidents and death on mountain road, some even fall of the cliff and after that can not view even be traced.
-        Such accidents not only destroy human life but also major loss financially to the individual and government also. To avoid such
-        problems in curve roads mountain areas, we have proposed this vehicle accident prevention system. The main objective of this
-        model is to diminish the accident in hairpin bends an U turnings.Sometimes it observes that the vehicle driver unable to see the
-        vehicle reaching form opposite side due to lack of vision and the serious accidents are happened. Though this type of project
-        ideas can help to decrease these type of problems.
+        In the world, India ranks top in road accidents. Mainly road accidents are caused due to High speed
+        or when the driver is not aware of the other vehicles coming opposite to it especially in the deep curves.
+        Such types of curves are called as HAIR PIN CURVES. The existing system makes use of convex mirrors
+        at the curves so that the driver can easily detect the vehicle coming in the opposite direction. This system
+        works well during the day but not effective in night. The proposed system makes use of sensors at hairpin
+        curves which work very efficiently during the night time. Placing the sensors at each side of the curves will
+        help us to solve the problem. The usage of sensors is that if the vehicle is 10 meters away from the curve the
+        sensor sends the signal to the vehicle coming in opposite direction in the form of light. In the same way the
+        sensor at the other side of the curve will send signal to the vehicle coming from the opposite direction. In
+        this way by using sensors we can avoid a greater number of accidents mainly at the deep curves. Reducing
+        the rate of accidents increases the well-being of a person.
     \end{abstract}
 
     \begin{IEEEkeywords}
@@ -68,18 +69,30 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     That about 377 peoples per day. In that 3.7\% are because of unexpected obstacles.There are many risky roads and bends in the world
     like mountain roads, narrow curve roads and hair pin bends for ex. Kolli hill roads, Gata Loops,3-Level Zig-zag roads in Sikkim,
     Leh Manali Highway.
-    The problem in the hair pin bends is that the drivers are unable to see the vehicle or obstacles coming from opposite side of the
-    curve. If the vehicle is in high speed, then it is difficult to control the speed of the vehicle and there are chances of falling to a cliff
-    and sometimes people not get traced. Not only accident is common thing for this type of places but also many vehicles even fall off
-    the mountain with no trace of the vehicle as well as driver this type of accident seen many times. This cause many human life loss as
-    well as destruction of roads. Mountain roads are generally very narrow and any accident on such roads can even cause it to close the
-    road for many days till the road to be cleared. We have also read and hear some news about mountain road remain close for many
-    days after some minor as well as major accident or natural calamities are happened. The vehicles involved in the accident need to
-    remove safely.
-    Sometimes heavy machinery need to be bring to remove the vehicle from cliffs or valleys. This is also a massive task. This is also a
-    massive task. This cause many losses of money, time, lives of people involves in accident and peoples stuck on the roads for
-    many hours or days. Usually convex mirrors or horns are used for this purpose, but it is not valid.
-
+    \newline
+         Hairpin turns are often built when a route climbs up or down a steep slope, so that it can travel mostly
+    across the slope with only moderate steepness and are often arrayed in a zigzag pattern. Highways with
+    repeating hairpin turns allow easier, safer ascents and descents of mountainous terrain than a direct, steep
+    climb and descent, at the price of greater distances of travel and usually lower speed limits, due to the
+    sharpness of the turn. Highways of this style are also generally less costly to build and maintain than
+    highways with tunnels. Hairpin curves are used when the terrain is very steep. Roadways will have a
+    maximum grade that a vehicle or truck can traverse. The zigzag component of the picture above minimizes
+    the grade, or steepness of the roadway. If you have ever ridden a bike up a steep hill, you might have found
+    yourself zigzagging back and forth across the roadway to get up the hill. The same principle applies here.
+    When designing a roadway, there are guidelines as to the length of the radius of curve based primarily on
+    the design speed. The faster the designs speed, the longer the radius of the curve. Truck traffic is a major
+    factor in the design criteria for the minimum radius of curvature. Turning templates are used to determine if
+    a truck can make the turn without too much of tracking. A bend in a road with a very acute inner angle,
+    making it necessary for an oncoming vehicle to turn almost 180° to continue on the road. Such turns in
+    ramps and trails may be called switchbacks in American English. While driving on roads at hairpin section,
+    many drivers face accident which results them into serious injuries or even death. The main reason behind
+    this accident is curves and bends of roads while turning in Ghats. It becomes difficult to see vehicles coming
+    from other lane and turning drivers usually have to assume a way for turning at such critical section this
+    creates a great risk of life other reason for accident in hairpin section is that only one vehicle can turn at
+    turnings at a time. If two vehicles come face to face while turning, it creates a chance of accidents and it
+    becomes difficult to handle. At night, due to no streetlights it becomes a difficult task of driving on hairpin
+    bends and especially while turning. It becomes more difficult at night to make a turn as vehicle coming from
+    another side of road is not visible due to darkness.
     \section{Literature Review}
 
     \subsection{“Sensor Based Accident Prevention System” Author: Aravinda B, Chaithra Lakshmi C, Deeksha, Ashutha K[1]}
@@ -117,79 +130,130 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     This paper conclude that, Accidents may takes place in various factors drunk and driving, Texting while driving, Speeding,
     Distractions, Sleeping while driving. Among Drowsiness is reason for most of the accidents. While driving at the speed of
     100km/hr. driver falls sleepy within 4 seconds the buzzer will enables.[4]
-    \section{Project Plan}
-    Before you begin to format your paper, first write and save the content as a
-    separate text file. Complete all content and organizational editing before
-    formatting. Please note sections \ref{AA}--\ref{SCM} below for more information on
-    proofreading, spelling and grammar.
+    
+    \subsection{“Implementation of Vehicle Mishap Averting System Using Arduino Microcontroller”,R.S Rakul[5]}
+    The Unit has been designed to prevent an accident by collision. The ‘heart' of the Unit is
+    Arduino microcontroller which performs all the vital tasks of the system. And it will be discussed in the
+    following subsequent sections. This system will receive information from the Ultrasonic transceiver, and
+    accordingly transmit the data via the Wi-Fi router to the controller. Through the buzzer indication, light
+    emitting display, and liquid crystal display, the vehicle information will be shown to the vehicle users. The
+    primary purpose of the system is to prevent collision between two or more vehicles when they take a turn on
+    U-bends.[5]
 
-    Keep your text and graphic files separate until after the text has been
-    formatted and styled. Do not number text heads---{\LaTeX} will do that
-    for you.
+    \section{Synopsis of Literature Review}
+    The purpose of these papers is to reduce the number of
+    accidents in curve roads. This is done by warning the driver
+    by means of LED light which glows when vehicle comes from
+    the other side of the curve. The vehicle is detected by the
+    help of IR Transmitter and Receiver sensor which is
+    interfaced to the microcontroller arduino Uno. In this we can
+    save thousands of lives in the curve roads on the ghat
+    section.
+    \section{Components Required}
 
-    \subsection{Abbreviations and Acronyms}\label{AA}
-    Define abbreviations and acronyms the first time they are used in the text,
-    even after they have been defined in the abstract. Abbreviations such as
-    IEEE, SI, MKS, CGS, ac, dc, and rms do not have to be defined. Do not use
-    abbreviations in the title or heads unless they are unavoidable.
 
-    \subsection{Units}
-    \begin{itemize}
-        \item Use either SI (MKS) or CGS as primary units. (SI units are encouraged.) English units may be used as secondary units (in parentheses). An exception would be the use of English units as identifiers in trade, such as ``3.5-inch disk drive''.
-        \item Avoid combining SI and CGS units, such as current in amperes and magnetic field in oersteds. This often leads to confusion because equations do not balance dimensionally. If you must use mixed units, clearly state the units for each quantity that you use in an equation.
-        \item Do not mix complete spellings and abbreviations of units: ``Wb/m\textsuperscript{2}'' or ``webers per square meter'', not ``webers/m\textsuperscript{2}''. Spell out units when they appear in text: ``. . . a few henries'', not ``. . . a few H''.
-        \item Use a zero before decimal points: ``0.25'', not ``.25''. Use ``cm\textsuperscript{3}'', not ``cc''.)
-    \end{itemize}
+    \subsection{ARDUINO UNO}\label{AA}
+    The Arduino Uno is a microcontroller board which is open
+    source used to insert the code as input using USB and can get
+    the excepted output.This platform consists of physical
+    programmable path board or IDE(Integrated Development
+    Environment) that runs on computer, used to mark and
+    upload computer code to the physical board. The
+    ATmega328 on the board comes preprogrammed with a
+    boot loader that allows uploading new code to it without the
+    use of an outside hardware programmer. Arduino board
+    design uses a mixture of microprocessors and controllers.
+    The
+    boards
+    are
+    set
+    with
+    digital
+    and
+    analog input/output (I/O) pins that may be interfaced to a
+    choice of development boards or breadboards (For
+    prototyping) and other circuits. The microcontrollers can be
+    programmed using C and C++ programming languages [3].
+
+
+    \subsection{IR SENSOR}
+    Infrared sensors are being used as proximity sensors and
+    they can be passive or active. Passive infrared sensors are
+    basically Infrared detectors. These sensors do not use any
+    infrared source and detects energy emitted by obstacles in
+    the field of view. The active infrared sensors consist of two
+    elements which are infrared source and infrared detector.
+    Infrared source includes an infrared laser diode. Infrared
+    detectors include photodiodes or phototransistors. The
+    energy emitted by the infrared source is reflected by a
+    purpose and falls on the infrared detector. An IR sensor
+    consists of an IR LED then an IR Photodiode; mutually they
+    are called as Photo – Coupler or Opto – Coupler. When the IR
+    transmitter emits radiation, it reaches the thing and some of
+    the radiation reflects reverse to the IR receiver. Based on the
+    force of the reception by the IR receiver, the output of the
+    sensor is defined [4].
 
     
 
-    \subsection{Figures and Tables}
-    \paragraph{Positioning Figures and Tables} Place figures and tables at the top and
-    bottom of columns. Avoid placing them in the middle of columns. Large
-    figures and tables may span across both columns. Figure captions should be
-    below the figures; table heads should appear above the tables. Insert
-    figures and tables after they are cited in the text. Use the abbreviation
-    ``Fig.~\ref{fig}'', even at the beginning of a sentence.
+    \subsection{LED LIGHTS}
+    \paragraphA Light Emitting Diode (LED) is an electronic device of a
+    semi-conductor source that emits light when an electrical
+    current is passed through it. The early LEDs are to produce
+    only red light, but the current LEDs can produce several
+    different colors, including red, green, and blue (RGB) light.
+    The recent advances in LED technology have made it
+    probable for LEDs to produce white light as well. LEDs are
+    generally used for indicator lights (such as power on/off
+    lights) on electronic devices. They also have few other
+    applications, with electronic signs, clock displays, and
+    flashlights. You can typically identify LEDs by a series of small lights that make up a bigger display. The capable
+    nature of LEDs allows them to produce brighter light than
+    other types of bulbs while using less energy [5].
 
-    \begin{table}[htbp]
-        \caption{Table Type Styles}
-        \begin{center}
-            \begin{tabular}{|c|c|c|c|}
-                \hline
-                \textbf{Table}&\multicolumn{3}{|c|}{\textbf{Table Column Head}} \\
-                \cline{2-4}
-                \textbf{Head} & \textbf{\textit{Table column subhead}}& \textbf{\textit{Subhead}}& \textbf{\textit{Subhead}} \\
-                \hline
-                copy& More table copy$^{\mathrm{a}}$& &  \\
-                \hline
-                \multicolumn{4}{l}{$^{\mathrm{a}}$Sample of a Table footnote.}
-            \end{tabular}
-            \label{tab1}
-        \end{center}
-    \end{table}
+    \subsection{OTHER ITEMS}
+    \itemize
+    \item Resistors
+    \item Transistors
+    \item Diodes
+    \item Push buttons
+    \item IC
+    \item Capacitors
+    \item Cables and Connectors
+    \item PCB and Breadboard
+    \enditemize
 
-    \begin{figure}[htbp]
-        \centerline{\includegraphics{arduiono-uno}}
-        \caption{Example of a figure caption.}
-        \label{fig}
-    \end{figure}
 
-    Figure Labels: Use 8 point Times New Roman for Figure labels. Use words
-    rather than symbols or abbreviations when writing Figure axis labels to
-    avoid confusing the reader. As an example, write the quantity
-    ``Magnetization'', or ``Magnetization, M'', not just ``M''. If including
-    units in the label, present them within parentheses. Do not label axes only
-    with units. In the example, write ``Magnetization (A/m)'' or ``Magnetization
-    \{A[m(1)]\}'', not just ``A/m''. Do not label axes with a ratio of
-    quantities and units. For example, write ``Temperature (K)'', not
-    ``Temperature/K''.
+    \section{Working Mechanism}
+    It uses two IR sensors, which are
+    placed on one side of the hairpin bend. These two IR sensors
+    are senses by the side of the downhill section of the road.
+    The sensors are mutually exclusive and are connected to
+    ATmega328P microcontroller through wires. Based on the
+    output of sensors, position of vehicles on other side of the
+    bend is detected which is provided as an input to the
+    microcontroller. The microcontroller which works on a
+    power supply of 9V runs a Priority algorithm which triggers
+    the warning LEDs to glow and thereby intelligently
+    controlling the movement of vehicles at the bend. Warning
+    LEDs are placed at the side of the uphill section of the
+    hairpin bend
 
+    \section{Conclusion}
+    The experiment are started with sensor, it senses the vehicle
+    with the help of IR Sensor. In this project we are alert the
+    driver by blinking. The clash avoidance at hairpin bend is
+    able to transmit data which is sensed from other side of the
+    road. The system is completely integrated and can give alert
+    to the driver by using LED. This system helps to detect the
+    vehicles by Using their IR Sensor. This system provides the
+    information about the vehicles coming from the opposite side of the vehicles in the Ghats section. This system is useful
+    when the driver can't see the vehicle in the opposite side of
+    the vehicle because of long curve roads in the Ghats section.
+    Thus the system offers the safety and security to the driver.
     \section*{Acknowledgment}
 
-    The preferred spelling of the word ``acknowledgment'' in America is without
-    an ``e'' after the ``g''. Avoid the stilted expression ``one of us (R. B.
-    G.) thanks $\ldots$''. Instead, try ``R. B. G. thanks$\ldots$''. Put sponsor
-    acknowledgments in the unnumbered footnote on the first page.
+    Thanks to Mrs. Ashwini Choughule Ma'am for guiding us through the project
 
 
     \begin{thebibliography}{00}
@@ -200,6 +264,8 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
         Systems (ICECS).pp. 1-5(2014).
         \bibitem{b4} DEEKSHA ASHUTHA K. ARAVINDA B, CHAITHRA LAKSHMI C. Sensor based accident prevention system. International Journal of Computer
         Applications, pages 36–39, 2012.
+        \bibitem{b5} R.S. Rakul, S. Ravia and K.N. Thirukkuralkani proposed a paper on “Implementation Of
+        Mishap Averting System Using Arduino Microcontroller”.
         \end{thebibliography}
 
 \end{document}
