--- a/Report.tex
+++ b/Report.tex
@@ -175,6 +175,11 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     prototyping) and other circuits. The microcontrollers can be
     programmed using C and C++ programming languages [3].
 
+    \begin{figure}[htbp]
+        \centerline{\includegraphics{fig3_200x200.png}}
+        \caption{Arduino UNO top view}
+        \label{fig}
+    \end{figure}
 
     \subsection{IR SENSOR}
     Infrared sensors are being used as proximity sensors and
@@ -194,7 +199,12 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     force of the reception by the IR receiver, the output of the
     sensor is defined [4].
 
-    
+    \begin{figure}[htbp]
+        \centerline{\includegraphics{ip-sensor}}
+        \caption{IR Sensor}
+        \label{fig}
+    \end{figure}
+
 
     \subsection{LED LIGHTS}
     \paragraphA Light Emitting Diode (LED) is an electronic device of a
