--- a/Report.tex
+++ b/Report.tex
@@ -11,7 +11,7 @@
 T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-    \title{Vehicle Accident Prevention System at Hairpin Bends\\{
+    \title{Vehicle Accident Prevention System at Hairpin Turns\\{
     \large Using IR Sensors and Arduino
     }
 
@@ -221,6 +221,23 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     nature of LEDs allows them to produce brighter light than
     other types of bulbs while using less energy [5].
 
+    \begin{figure}[htbp]
+        \centerline{\includegraphics{led}}
+        \caption{LED}
+        \label{fig}
+    \end{figure}
+
+    \begin{figure}[htbp]
+        \centerline{\includegraphics{jumper-wires}}
+        \caption{Jumper Wires}
+        \label{fig}
+    \end{figure}
+
+    \begin{figure}[htbp]
+        \centerline{\includegraphics{pcb-connector}}
+        \caption{PCB}
+        \label{fig}
+    \end{figure}
     \subsection{OTHER ITEMS}
     \itemize
     \item Resistors
