--- a/Report.tex
+++ b/Report.tex
@@ -149,6 +149,19 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     interfaced to the microcontroller arduino Uno. In this we can
     save thousands of lives in the curve roads on the ghat
     section.
+
+    \section{Project Plan}
+    \begin{figure}[htbp]
+        \centerline{\includegraphics{arduino-connection}}
+        \caption{Jumer wire connection}
+        \label{fig}
+    \end{figure}
+    \subsection{Setup}
+    \subsubsection{Setting up the Arduino}
+    We used
+
+
+
     \section{Components Required}
 
 
