--- a/Report.tex
+++ b/Report.tex
@@ -94,7 +94,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     bends and especially while turning. It becomes more difficult at night to make a turn as vehicle coming from
     another side of road is not visible due to darkness.
     \begin{figure}[htbp]
-        \centerline{\includegraphics[scale=0.5]{arduino-connector}}
+        \centerline{\includegraphics[scale=0.35]{hairpin}}
         \caption{Connector cable}
         \label{fig}
     \end{figure}
