--- a/Report.tex
+++ b/Report.tex
@@ -95,7 +95,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
     another side of road is not visible due to darkness.
     \begin{figure}[htbp]
         \centerline{\includegraphics[scale=0.35]{hairpin}}
-        \caption{Connector cable}
+        \caption{Hairpin turn}
         \label{fig}
     \end{figure}
 
