--- a/Report.tex
+++ b/Report.tex
@@ -203,6 +203,13 @@ void loop()
         \label{fig}
     \end{figure}
 
+    \begin{figure}[htbp]
+        \centerline{\includegraphics[scale=0.35]{fig2}}
+        \caption{Prototype connection}
+        \label{fig}
+    \end{figure}
+
+
     \subsubsection{Final model}
 
     This is the final connection. The LED is connected after the model is completed.
